--- a/installers/windows/installer.wxs
+++ b/installers/windows/installer.wxs
@@ -7,10 +7,13 @@
            UpgradeCode="12345678-1234-1234-1234-123456789012"
            InstallerVersion="500" 
            Compressed="true"
-           Scope="perMachine"
-           InstallPrivileges="elevated">
+           Scope="perMachine">
     
-    <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
+    <MajorUpgrade 
+      AllowDowngrades="false"
+      AllowSameVersionUpgrades="false"
+      DowngradeErrorMessage="A newer version of [ProductName] is already installed."
+      Schedule="afterInstallInitialize" />
     
     <Media Id="1" Cabinet="GolemGpuImager.cab" EmbedCab="true" />
     
