--- a/installers/windows/installer.wxs
+++ b/installers/windows/installer.wxs
@@ -12,7 +12,7 @@
     
     <MajorUpgrade 
       AllowDowngrades="false"
-      AllowSameVersionUpgrades="false"
+      AllowSameVersionUpgrades="true"
       DowngradeErrorMessage="A newer version of [ProductName] is already installed."
       Schedule="afterInstallInitialize" />
     
